# mfd-experiments

./: .gitignore  Vagrantfile  estTimeData.min.json  mfd-stuff.cabal  stack.yaml
app/: Main.hs  Sealing.hs  Sealing.lhs
bld/haskell/: Filters.hs
bld/vagrant/: exports.sh  texlive.profile
