name:                mfd-stuff
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/mfd-extrasensory#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     Lib
  build-depends:       base
  default-language:    Haskell2010

executable extrasensory

  hs-source-dirs:      
    app

  main-is:             
    Main.hs

  default-extensions: 
    NoMonomorphismRestriction
    MultiParamTypeClasses 
    FunctionalDependencies
    ExistentialQuantification
    GADTs
    DuplicateRecordFields
    OverloadedLabels
    TypeFamilies
    EmptyDataDecls
    TemplateHaskell
    RankNTypes
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    ScopedTypeVariables
    ConstraintKinds
    NamedFieldPuns
    RecordWildCards
    InstanceSigs
    DataKinds
    LambdaCase
    OverloadedStrings
    OverloadedLists
    TupleSections
    StandaloneDeriving
    DefaultSignatures
    DeriveDataTypeable
    DeriveAnyClass
    RecursiveDo

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  
  build-depends:       
    base,
    fgl,
    mtl,
    diagrams,
    containers,
    diagrams-lib,
    diagrams-svg, 
    diagrams-rasterific, 
    diagrams-graphviz,
    graphviz,
    lens >= 4.14,
    mfd-stuff
  
  default-language:    Haskell2010

executable sealing-analysis

  hs-source-dirs:      
    app

  main-is:             
    Sealing.hs

  ghc-options:        -O -threaded -rtsopts -with-rtsopts=-N
  
  build-depends:       
    base,
    cryptonite,
    exact-combinatorics,
    -- probability, 
    repa,
    repa-fftw,
    -- pure-fft,
    pretty-show,
    aeson,
    aeson-pretty,
    bytestring,
    directory,
    containers,
    memoize
--    fgl,
--    mtl,
--    diagrams,
--    containers,
--    diagrams-lib,
--    diagrams-svg, 
--    diagrams-rasterific, 
--    diagrams-graphviz,
--    graphviz,
--    lens >= 4.14,
--    mfd-extrasensory
  
  default-language:    Haskell2010
test-suite mfd-extrasensory-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tst
  main-is:             Spec.hs
  build-depends:       base
                     , mfd-extrasensory
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/mfd-extrasensory
